@@ -1169,6 +1169,7 @@ SEE ALSO
         get_angle,          \
         get_area,           \
         get_chains,         \
+        get_color_index,    \
         get_color_indices,  \
         get_object_color_index, \
         get_color_tuple,    \
