@@ -1027,12 +1027,8 @@ SEE ALSO
       # preprocess selection
       selection = selector.process(selection)
       #
+      atomic_props = 1
       state = int(state)
-      if state<0: # hack -- need to replace with "alter_state_atom" command
-         state = -state
-         atomic_props = 1
-      else:
-         atomic_props = 0
       try:
          lock()
          r = _cmd.alter_state(int(state)-1,"("+str(selection)+")",str(expression),
@@ -1064,11 +1060,7 @@ SEE ALSO
       selection = selector.process(selection)
       state = int(state)
       #
-      if state<0: # hack -- need to replace with "alter_state_atom" command
-         state = -state
-         atomic_props = 1
-      else:
-         atomic_props = 0
+      atomic_props = 1
       try:
          lock()
          r = _cmd.alter_state(int(state)-1,"("+str(selection)+")",
